resources/demo_route/03_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  name: tetris-4-k8s
  namespace: tetris-4-k8s
  labels:
    app: tetris-4-k8s
    app.kubernetes.io/component: tetris-4-k8s
    app.kubernetes.io/instance: tetris-4-k8s
    app.kubernetes.io/name: tetris-4-k8s
    app.kubernetes.io/part-of: tetris-4-k8s-app
    app.openshift.io/runtime-version: latest
spec:
  to:
    kind: Service
    name: tetris-4-k8s
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
